Fix navar items vertical alignment
We were focing all .nav children to be inline-box which worked just fine
for text/inline elements but it was making the icons larger since the
line-height was being taken into account.

Also, we had a mix bag of layoutingin the navvar which was not helpiong
while debugging this. This ocmmit also simplifies it.

--- a/hugo/assets/css/header.css
+++ b/hugo/assets/css/header.css
@@ -9,7 +9,6 @@ header {
   /** We use 10 to give some room for other legit cases of z-index, for example */
   /** To implement LQIP */
   z-index: 10;
-  line-height: normal;
 }
 
 .flex-spacer {
@@ -32,14 +31,14 @@ header {
   flex-wrap: wrap;
   overflow: hidden;
   width: 100%;
-  max-height: 1lh;
+  height: var(--header-icons);
   gap: 2em;
 
 }
 
 .toggle:checked~.links {
   overflow: visible;
-  max-height: none;
+  height: auto;
   font-size: 0.8em;
 }
 
@@ -73,11 +72,6 @@ header {
   position: relative;
   display: flex;
   align-items: center;
-  line-height: normal;
-  min-height: var(--font-size-fluid-md);
-}
-
-.nav-top-primary li>a {
   height: 100%;
 }
 
