--- a/hugo/assets/css/nav-icons.css
+++ b/hugo/assets/css/nav-icons.css
@@ -5,14 +5,9 @@
     mask-position: center;
 }
 
-.nav > * {
+.nav > span {
     transition: scale 0.3s;
     display: inline-block;
-}
-
-.nav > .name {
-    text-align: center;
-    width: 100%;
 }
 
 .nav:hover > * {
